# bee-hive

./: .coverage.code-mb16.45606.XaezdUxx.wgw0  .coverage.code-mb16.45607.XXPefqnx.wgw1  .coverage.code-mb16.45609.XXIJAKvx.wgw3  .coverage.code-mb16.45610.XKpviHvx.wgw4  .coverage.code-mb16.45611.XzFETzex.wgw5  .coverage.code-mb16.45612.XEelPfEx.wgw6  .coverage.code-mb16.45613.XctDlYLx.wgw7  .coverage.code-mb16.45614.XvpYocjx.wgw8  .coverage.code-mb16.45615.XjkGOTHx.wgw9  .coverage.code-mb16.45616.XNvgBrvx.wgw10  .coverage.code-mb16.45617.XSQNrTZx.wgw11  .coverage.code-mb16.45619.XYyYFPxx.wgw12  .coverage.code-mb16.45626.XEFXikWx.wgw13  .coverage.code-mb16.45633.XVHwDBax.wgw14  .coverage.code-mb16.45639.XFsrkRIx.wgw15  .coverage.code-mb16.48222.XLhVAzvx  .coverage.code-mb16.48884.XsVwRxTx  .coverage.code-mb16.51078.XdjEDMbx  .coverage.code-mb16.52145.XAtdHpWx  .coverage.code-mb16.52145.XDurNBlx  .coverage.code-mb16.52791.XHnKsOTx  .coverage.code-mb16.53754.XYNnIQBx  .coverage.code-mb16.53754.XvOFBJXx  .env.development  .env.development.example  .env.development.standardized  .env.docker.example  .env.example  .env.local.backup.1753964918  .env.local.backup.1753964927  .env.local.backup.1753985226  .env.local.backup.1753985384  .env.local.backup.1753985667  .env.minimal  .env.ports  .env.production.example  .env.production.standardized  .env.production.template  .env.production.test  .env.production.unified  (+593 more)
.agent_state/: epic_plan.yml  test_baseline.json  test_failure_analysis.json  test_fix_priority.yml
.claude/: PROJECT_INDEX_GUIDE.md  QUICK_START.md  README.md  context-config.yaml  index-manifest.json  project-index.json  quick-reference.md  settings.json  settings.local.json  structure-map.md  validate-index.py  workflow_evaluation_report.md
.devcontainer/: Dockerfile  Dockerfile.devcontainer  README.md  devcontainer.json  docker-compose.dev.yml  docker-compose.devcontainer.yml  post-create.sh  post-start.sh
.github/: pull_request_template.md
.performance_data/: baselines.json
api_contracts/: semantic_memory_service.yaml
app/: __init__.py  cli.py  dx_cli.py  enhanced_hive_cli.py  hive_cli.py  main.py
business_intelligence/: epic8_baseline_metrics.py
claude_hooks/: OnAgentStart.md  PostToolUse.md  PreToolUse.md
cli/: config_generator.py  docker_manager.py  framework_adapters.py  project_detector.py  validation_framework.py
client-libraries/: project-index-client.js  project_index_client.py
config/: cdn-optimization.js  documentation_quality_gates.yaml  documentation_validation.yaml  living_documentation.yaml  nginx.conf  nginx.production.conf  port-management.py  postgresql.conf  postgresql.production.conf  project-size-profiles.yml  redis.production.conf  servers.json
demo/: README.md  demo_config.json  demo_server.py  index.html  manifest.json  validate_demo.py
demo_consolidated_hooks/: quality-gate.sh  test_consolidated_hooks.sh  test_results.json  test_summary.md
docker/: Dockerfile.dlq-service  Dockerfile.project-index  Dockerfile.project-index-monitor  Dockerfile.project-index-worker  dlq-service.yml  health-check.py  healthcheck.py  requirements-monitor.txt
docs/: ADVANCED_DEVELOPER_PATH.md  AGENT_DELEGATION_FRAMEWORK.md  AGENT_PROMPT_CONSOLIDATION.md  AGENT_SPECIALIZATION_TEMPLATES.md  AI_ENHANCEMENT_TEAM_IMPLEMENTATION_GUIDE.md  API_DOCUMENTATION.md  API_REFERENCE_COMPREHENSIVE.md  ARCHITECTURE.md  AUTONOMOUS_DEVELOPMENT_DEMO.md  AUTONOMOUS_SETUP_GUIDE.md  BOTTOM_UP_TESTING_STRATEGY.md  CLAUDE.md  CLAUDE_CODE_HANDOFF_PROMPT.md  CLAUDE_CODE_PROMPT.md  CLEANUP_AUDIT_REPORT.md  CLEANUP_RECOMMENDATIONS.md  CLI_INSTALLER_ARCHITECTURE.md  CLI_INSTALLER_USAGE_GUIDE.md  CLI_VALIDATION_REPORT.md  COMMAND_DOCUMENTATION_TEMPLATE.md  COMPREHENSIVE_SYSTEM_AUDIT.md  COMPREHENSIVE_TESTING_INFRASTRUCTURE_REPORT.md  CONSOLIDATED_ROADMAP.md  CONSOLIDATION_REPORT.md  CONSOLIDATION_SUMMARY.md  CONTRACT_TESTING_FRAMEWORK_DOCUMENTATION.md  CONTRIBUTING.md  COORDINATION_DASHBOARD_USER_GUIDE.md  CORE.md  CURRENT_STATUS.md  CUSTOM_COMMANDS_USER_GUIDE.md  DASHBOARD_VALIDATION_REPORT.md  DELEGATION_STRATEGY.md  DELETION_CANDIDATES.md  DEVELOPER_GUIDE.md  DEVELOPMENT_FRAMEWORK.md  DOCS_INDEX.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  ENHANCED_CONFIGURATION_SYSTEM.md  ENTERPRISE_DEPLOYMENT_SECURITY_GUIDE.md  (+89 more)
docs-site/: README.md  index.md  package-lock.json  package.json
examples/: context_preserver_usage.py  custom_commands_demo.py  refactoring_demo.py  short_id_examples.py  vertical_slice_demonstration.py  websocket_client_example.py
frontend/: TYPESCRIPT_BUILD_STATUS.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  test_api_connection.html  tsconfig.json  validate_integration.js  vite.config.ts  vitest.config.ts
integration/: performance_integration_manager.py
integrations/: QUICK_START_INTEGRATION_GUIDE.md  README.md
k8s/: production-deployment.yaml
memory-bank/: active-context.md  product-context.md  progress.md  project-brief.md  system-patterns.md  tech-context.md
migrations/: env.py  short_id_migration.py
mobile-pwa/: .env.example  API_INTEGRATION_DOCUMENTATION.md  API_INTEGRATION_REFERENCE.md  AUTHENTICATION_IMPLEMENTATION.md  CONTEXT_COMPRESSION_IMPLEMENTATION.md  Dockerfile.dev  E2E_TESTING_IMPLEMENTATION_SUMMARY.md  EPIC5_PHASE1_COMPLETION_REPORT.md  EPIC_E_PHASE1_COMPLETION_REPORT.md  INTEGRATION_VALIDATION_REPORT.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  README-TESTING.md  README.md  READY_TO_USE_GUIDE.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_REPORT.md  bandit_report_validation.json  chart-optimization-report.json  index.html  lighthouse-pwa-audit.js  lighthouse-pwa-report.json  nginx.conf  offline-validation-report.json  optimization-manifest.json  optimization-report.json  package-lock.json  package.json  performance-validation.py  playwright.config.ts  tailwind.config.js  tsconfig.json  validate_pwa_performance.js  validation-results.json  vite.config.production.ts  vite.config.ts  vitest.config.ts
mock_servers/: observability_events_mock.py  semantic_memory_mock.py
production_ops/: README.md
(+3202 files in other folders)
